# insurance-be

./: .env.example  .gitignore  GEMINI.md  README.md  manage.py  pyproject.toml  requirements.txt  test.py  tmp.py  vercel.json
.gemini/: tasks.md
.gemini/tasks/: stats_api_endpoint_strategy.md
apps/policy/: models.py  urls.py  utils.py
apps/policy/migrations/: 0001_initial.py  0002_vendormodel_policymodel_vendor.py  0003_alter_policymodel_agent_alter_policymodel_client_and_more.py
apps/policy/serializers/: policy_serializer.py
apps/policy/utils/: utils_agent.py
apps/policy/views/: policy_view.py  report_view.py  stat_view.py
apps/stats/: urls.py  views.py
apps/users/: urls.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: user_model.py
apps/users/serializers/: user_serializer.py
apps/users/views/: user_view.py
insurance-be/: asgi.py  settings.py  urls.py  wsgi.py
